usb-wasm/check_output.txt
warning: patch `rusb v0.9.4 (/Users/sibrenwieme/Documents/Masterproef/usb-wasm/rusb-wasi)` was not used in the crate graph
help: Check that the patched package version and available features are compatible
      with the dependency requirements. If the patch has a different version from
      what is locked in the Cargo.lock file, run `cargo update` to use the new
      version. This may also occur with an optional dependency that is not enabled.
    Checking usb-wasm v0.1.0 (/Users/sibrenwieme/Documents/Masterproef/usb-wasm/usb-wasm)
error: failed to resolve directory while parsing WIT for path [/Users/sibrenwieme/Documents/Masterproef/usb-wasm/usb-wasm/wit]
       
       Caused by:
           0: failed to parse package: /Users/sibrenwieme/Documents/Masterproef/usb-wasm/usb-wasm/wit
           1: failed to start resolving path: /Users/sibrenwieme/Documents/Masterproef/usb-wasm/usb-wasm/wit/world.wit
           2: package identifier `component:usb` does not match previous package name of `component:usb@0.2.1`
                   --> /Users/sibrenwieme/Documents/Masterproef/usb-wasm/usb-wasm/wit/world.wit:1:9
                    |
                  1 | package component:usb;
                    |         ^------------
  --> usb-wasm/src/lib.rs:9:1
   |
 9 | / wasmtime::componen...
10 | |     world: "host",
11 | |     path: "wit",
12 | |     with: {
...  |
19 | |     },
20 | | });
   | |__^
   |
   = note: this error originates in the macro `wasmtime::component::bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/usb_backend.rs:1:12
  |
1 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/usb_backend.rs:2:12
  |
2 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/usb_backend.rs:3:12
  |
3 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/usb_backend.rs:4:12
  |
4 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/usb_backend.rs:5:12
  |
5 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/usb_backend.rs:6:12
  |
6 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/host_impl.rs:1:12
  |
1 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/host_impl.rs:2:12
  |
2 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/host_impl.rs:4:12
  |
4 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/host_impl.rs:5:12
  |
5 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/host_impl.rs:6:12
  |
6 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0433]: failed to resolve: unresolved import
 --> usb-wasm/src/host_impl.rs:7:12
  |
7 | ...e::bindings::compo...
  |       ^^^^^^^^
  |       |
  |       unresolved import
  |       help: a similar path exists: `wasmtime_wasi::bindings`

error[E0432]: unresolved import `component`
  --> usb-wasm/src/lib.rs:22:9
   |
22 | pub use component::usb;
   |         ^^^^^^^^^ help: a similar path exists: `wasmtime::component`

warning: unused import: `libusb_transfer`
  --> usb-wasm/src/usb_backend.rs:10:71
   |
10 | ...e, libusb_transfer,
   |       ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `host_impl::*`
   --> usb-wasm/src/lib.rs:173:9
    |
173 | pub use host_impl::*;
    |         ^^^^^^^^^^^^

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
warning: `usb-wasm` (lib) generated 2 warnings
error: could not compile `usb-wasm` (lib) due to 14 previous errors; 2 warnings emitted
